[gd_scene load_steps=28 format=3 uid="uid://c6c1qt6n6vcex"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_bvfsr"]
[ext_resource type="Texture2D" uid="uid://c8xfj67d3jn72" path="res://assets/player_down.png" id="1_qhk4b"]
[ext_resource type="Texture2D" uid="uid://dugipdol72hc6" path="res://assets/dead_player.png" id="2_jujkh"]
[ext_resource type="Texture2D" uid="uid://gdio74efinfk" path="res://assets/player_right.png" id="2_xes56"]
[ext_resource type="Texture2D" uid="uid://csbvb04m4f72k" path="res://assets/player_up.png" id="3_hnbr8"]
[ext_resource type="PackedScene" uid="uid://monkduuu5cba" path="res://drill.tscn" id="5_sorlu"]
[ext_resource type="PackedScene" uid="uid://wniglcht6m3o" path="res://components/health_component.tscn" id="6_7mwk8"]
[ext_resource type="PackedScene" uid="uid://c0rl6ym1o7ku1" path="res://flashlight.tscn" id="6_lkgct"]
[ext_resource type="PackedScene" uid="uid://dr3jninldw3p3" path="res://sword.tscn" id="7_vw6j3"]
[ext_resource type="Texture2D" uid="uid://bhn40lsxnxm6x" path="res://assets/neutral_light_texture_96.webp" id="8_4egi1"]
[ext_resource type="PackedScene" uid="uid://65gx614nc0v3" path="res://entities/bomb_item/bomb_item.tscn" id="8_bbbaf"]
[ext_resource type="AudioStream" uid="uid://fbnjyplsonnp" path="res://assets/sfx/footsteps.ogg" id="9_5wqtx"]
[ext_resource type="PackedScene" uid="uid://bh1jbcbl117l3" path="res://entities/speed_item/speed_item.tscn" id="9_ddntb"]
[ext_resource type="PackedScene" uid="uid://bf5pgq2mu3vjd" path="res://entities/warp_item/warp_item.tscn" id="10_n7q74"]
[ext_resource type="Texture2D" uid="uid://dmyefpxne14pu" path="res://assets/bomb_particle.png" id="11_poony"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0hqvu"]
atlas = ExtResource("1_qhk4b")
region = Rect2(0, 0, 10, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_144rn"]
atlas = ExtResource("1_qhk4b")
region = Rect2(10, 0, 10, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwjej"]
atlas = ExtResource("1_qhk4b")
region = Rect2(20, 0, 10, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpqqr"]
atlas = ExtResource("2_xes56")
region = Rect2(0, 0, 10, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ulrv"]
atlas = ExtResource("2_xes56")
region = Rect2(10, 0, 10, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tnqs"]
atlas = ExtResource("2_xes56")
region = Rect2(20, 0, 10, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8vik"]
atlas = ExtResource("3_hnbr8")
region = Rect2(0, 0, 10, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6bxu"]
atlas = ExtResource("3_hnbr8")
region = Rect2(10, 0, 10, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_fna8y"]
atlas = ExtResource("3_hnbr8")
region = Rect2(20, 0, 10, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_xcc5t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jujkh")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hqvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_144rn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwjej")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpqqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ulrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tnqs")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8vik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6bxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fna8y")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_cyyjn"]
light_mode = 1

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3awcs"]
radius = 6.0
height = 52.0

[node name="Player" type="CharacterBody2D"]
position = Vector2(103, 146)
script = ExtResource("1_bvfsr")
metadata/_edit_group_ = true

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_xcc5t")
animation = &"walk_down"

[node name="Drill" parent="PlayerSprite" instance=ExtResource("5_sorlu")]
position = Vector2(0, 4)

[node name="Flashlight" parent="PlayerSprite" instance=ExtResource("6_lkgct")]
position = Vector2(0, 4)
toggled = true

[node name="Sword" parent="PlayerSprite" instance=ExtResource("7_vw6j3")]
position = Vector2(-0.75, 3.25)

[node name="BombItem" parent="PlayerSprite" instance=ExtResource("8_bbbaf")]
scale = Vector2(0.5, 0.5)

[node name="SpeedItem" parent="PlayerSprite" instance=ExtResource("9_ddntb")]
scale = Vector2(0.5, 0.5)

[node name="WarpItem" parent="PlayerSprite" instance=ExtResource("10_n7q74")]
scale = Vector2(0.5, 0.5)

[node name="WarpLabel" type="Control" parent="PlayerSprite"]
visible = false
material = SubResource("CanvasItemMaterial_cyyjn")
layout_mode = 3
anchors_preset = 0
offset_left = -8.5
offset_top = -11.0
offset_right = 10.5
offset_bottom = 2.0

[node name="Label" type="Label" parent="PlayerSprite/WarpLabel"]
layout_mode = 1
offset_right = 79.0
offset_bottom = 23.0
scale = Vector2(0.25, 0.25)
text = "Warping..."

[node name="WarpParticles" type="CPUParticles2D" parent="PlayerSprite"]
emitting = false
amount = 32
one_shot = true
texture = ExtResource("11_poony")
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 0.8
initial_velocity_max = 51.3
scale_amount_min = 2.0
scale_amount_max = 2.0
color = Color(0.32549, 0.784314, 0.447059, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_3awcs")

[node name="HealthComponent" parent="." instance=ExtResource("6_7mwk8")]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="."]
texture = ExtResource("8_4egi1")

[node name="AudioListener2D" type="AudioListener2D" parent="."]

[node name="FootstepSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_5wqtx")
volume_db = -1.0

[node name="Modifiers" type="Node" parent="."]

[connection signal="drain_power" from="PlayerSprite/Drill" to="." method="_on_drill_drained_power"]
[connection signal="drain_power" from="PlayerSprite/Flashlight" to="." method="_on_flashlight_drained_power"]
[connection signal="drain_power" from="PlayerSprite/Sword" to="." method="_on_sword_drain_power"]
[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_changed"]
